# robot-affordances

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/scripts/: affordances_from_datadump.xml.template  affordances_from_robot_camera.xml.template  affordances_from_webcam.xml.template  handActions-system-sim.xml  handAffExploration.xml
app/scripts/legacy/: handActions-app.xml
blobDescriptor2/include/: DescriptorModule.h  DescriptorThread.h  Obj.h  Obj2D.h
blobDescriptor2/src/: DescriptorThread.cpp  Obj.cpp
docs/: README.md
src/: CMakeLists.txt
src/blobDescriptor2/: CMakeLists.txt
src/blobDescriptor2/include/: DescriptorModule.h  DescriptorThread.h  Helpers.h  Obj2D.h
src/blobDescriptor2/src/: DescriptorModule.cpp  DescriptorThread.cpp  Helpers.cpp  Obj2D.cpp  main.cpp
src/common/include/: OpenCVHelpers.h
src/common/src/: OpenCVHelpers.cpp
src/descriptorReduction/: CMakeLists.txt
src/descriptorReduction/include/: DescriptorReductionDefaults.h  DescriptorReductionModule.h
src/descriptorReduction/src/: DescriptorReductionMain.cpp  DescriptorReductionModule.cpp
src/handActions/: CMakeLists.txt  README.md  handActions.thrift  handActions.xml
src/handActions/include/: HandActionsModule.h
src/handActions/src/: HandActionsModule.cpp  main.cpp
src/handAffManager/: CMakeLists.txt  handAffManager.thrift
src/handAffManager/include/: CSVFile.h  HandAffManagerModule.h
src/handAffManager/src/: HandAffManagerMain.cpp  HandAffManagerModule.cpp
src/matlab/: .gitignore  README.md
src/matlab/data+combinator/: combinatorWithNoise_handdata.m  combinatorWithoutNoise_tooldata.m  pca_2n2c2v_hh.mat  pca_2n2c2v_ht.mat  pca_2n2c2v_tt.mat  pca_2n3c2v_hh.mat
src/matlab/experiments/: discretize.m  effect_statistics_hand.m  effect_statistics_tool.m  getRanges.m  plot_all_hand_effects.m  plot_all_tool_effects.m  posterior_evaluation_criterion.m  select_manipulator_evaluation_hh.m  select_manipulator_evaluation_ht.m  select_manipulator_evaluation_tt.m  train_hand_select_manipulator.m  train_hand_test_hand.m  train_hand_test_tool.m  train_tool_select_manipulator.m  train_tool_test_tool.m
src/matlab/training/: discretize.m  getRanges.m
src/robotHandProcessor/: CMakeLists.txt  robotHandProcessor.thrift
src/robotHandProcessor/include/: RobotHandProcessorModule.h  RobotHandProcessorThread.h
src/robotHandProcessor/src/: RobotHandProcessorMain.cpp  RobotHandProcessorModule.cpp  RobotHandProcessorThread.cpp
src/shapeDescriptor/: CMakeLists.txt  shapeDescriptor.xml
src/shapeDescriptor/include/: DescriptorDefaults.h  DescriptorModule.h  DescriptorThread.h  Helpers.h  Obj.h  Obj2D.h
src/shapeDescriptor/src/: DescriptorModule.cpp  DescriptorThread.cpp  Helpers.cpp  Obj.cpp  Obj2D.cpp  main.cpp
